--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 ---
-title: The last sales CRM you'll ever need
-description: Track and optimize your sales team in real time
+title: The only small business SEO you'll ever need
+description: Let your customers find you with ease
 ---
 <section class="hero">
 	<div class="text-container">
-		<h1 class="editable">The last sales CRM <strong>you'll ever need</strong></h1>
-		<p class="subtext editable">Track and optimize your sales team in real time.</p>
+		<h1 class="editable">The only small business SEO <strong>you'll ever need</strong></h1>
+		<p class="subtext editable">Let your customers find you with ease.</p>
 		<div class="cta button alt"><a href="/sign-up/">Get Started Free</a></div>
 		<div>
 			<img src="/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
@@ -17,8 +17,8 @@ description: Track and optimize your sales team in real time
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>How can we <strong>double</strong> our sales revenue?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources. </p>
+				<h2>How can we <strong>improve</strong> customers trhough your door?</h2>
+				<p>Psytechnic learns your business. By analyzing your sales data, Psytechnic optimizes your sales process and show you where you should be spending your resources. </p>
 			</div>
 			<div class="image">
 				<img src="/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
