--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 ---
-title: The only small business SEO you'll ever need
-description: Let your customers find you with ease
+title: SEO for small business
+description: SEO developed for small business needs
 ---
 <section class="hero">
 	<div class="text-container">
-		<h1 class="editable">The only small business SEO <strong>you'll ever need</strong></h1>
-		<p class="subtext editable">Let your customers find you with ease.</p>
+		<h1 class="editable">SEO for small business <strong></strong></h1>
+		<p class="subtext editable">SEO developed for small business needs</p>
 		<div class="cta button alt"><a href="/sign-up/">Get Started Free</a></div>
 		<div>
 			<img src="/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
