--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ description: SEO developed for small business needs
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>How can we <strong>improve</strong> customers trhough your door?</h2>
+				<h2>How can we <strong>improve</strong> customers through your door?</h2>
 				<p>Psytechnic learns your business. By analyzing your sales data, Psytechnic optimizes your sales process and show you where you should be spending your resources. </p>
 			</div>
 			<div class="image">
