--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@ description: SEO developed for small business needs
 	<div class="text-container">
 		<h1 class="editable">SEO for small business <strong></strong></h1>
 		<p class="subtext editable">SEO developed for small business needs</p>
-		<div class="cta button alt"><a href="/sign-up/">Get Started Free</a></div>
+		<div class="cta button alt"><a href="/contact/">Get Started Today!</a></div>
 		<div>
-			<img src="/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+			<img src="/images/dashboard1.png" alt="Screenshot" class="screenshot editable" />
 		</div>
 	</div>
 </section>
@@ -17,11 +17,11 @@ description: SEO developed for small business needs
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>How can we <strong>improve</strong> customers through your door?</h2>
-				<p>Psytechnic learns your business. By analyzing your sales data, Psytechnic optimizes your sales process and show you where you should be spending your resources. </p>
+				<h2>How can we <strong>improve</strong> the number of customers through your door?</h2>
+				<p>Psytechnic learns your business. By analyzing your sales data, Psytechnic optimizes your SEO presence online, and focuses resources on getting you to the top. </p>
 			</div>
 			<div class="image">
-				<img src="/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+				<img src="/images/dashboard1.png" alt="Screenshot" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
@@ -29,11 +29,11 @@ description: SEO developed for small business needs
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>How can I <strong>keep track</strong> of my sales team?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources.</p>
+				<h2>How can I <strong>keep track</strong> of my reach?</h2>
+				<p>Psytechnic provides all of the insights you need to see how you're being found.</p>
 			</div>
 			<div class="image">
-				<img src="/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+				<img src="https://www.google.com/intl/en_au/business/2017/images/static/index/emerging/index-optimize-laptop_2x.png" alt="Screenshot" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
@@ -45,7 +45,7 @@ description: SEO developed for small business needs
 				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources.</p>
 			</div>
 			<div class="image">
-				<img src="/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+				<img src="/www.google.com/intl/en_au/business/2017/images/static/index/emerging/index-optimize-laptop_2x.png" alt="Screenshot" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
@@ -64,6 +64,6 @@ description: SEO developed for small business needs
 
 	<section class="bottom-cta">
 		<h2 class="editable"><strong>Improve</strong> your sales process today</h2>
-		<div class="button alt"><a href="#">Get Started Free</a></div>
+		<div class="button alt"><a href="/contact/">Get Started Today!</a></div>
 	</section>
 </div>
