--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ description: SEO developed for small business needs
 	</section>
 
 	<section class="bottom-cta">
-		<h2 class="editable"><strong>Improve</strong> your sales process today</h2>
+		<h2 class="editable"><strong>Improve</strong> your SEO today</h2>
 		<div class="button alt"><a href="/contact/">Get Started Today!</a></div>
 	</section>
 </div>
