--- a/pricing.html
+++ b/pricing.html
@@ -8,16 +8,12 @@ pricing_table:
     features:
       - text: $25 per month
         highlight: true
-      - text: Up to 5 users
+      - text: Google My Business Set Up
         highlight: false
-      - text: Basic lead scoring
+      - text: Enter Business Information
         highlight: false
-      - text: CRM
-        highlight: false
-      - text: Basic reporting
-        highlight: false
-      - text: Sales map
-        highlight: false
+      - text: Cover Picture
+        highlight: false      
     call_to_action:
       link: http://mysite.com?plan=basic
       text: Get started
@@ -46,7 +42,7 @@ pricing_table:
         highlight: true
       - text: Everything in Basic and Pro
         highlight: false
-      - text: Up to 100 users
+      - text: Standalone WEebsite Creation
         highlight: false
       - text: Campaign builder
         highlight: false
