--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ description: SEO developed for small business needs
 		<div class="container flex">
 			<div class="text editable">
 				<h2>How can we <strong>improve</strong> the number of customers through your door?</h2>
-				<p>Psytechnic learns your business. By analyzing your sales data, Psytechnic optimizes your SEO presence online, and focuses resources on getting you to the top. </p>
+				<p>Psytechnic learns your business. By analyzing your sales data, PsyTechnic optimizes your Google My Business listing, and focuses resources on getting you to the top. </p>
 			</div>
 			<div class="image">
 				<img src="/images/dashboard1.png" alt="Screenshot" class="screenshot editable" />
@@ -30,7 +30,7 @@ description: SEO developed for small business needs
 		<div class="container flex">
 			<div class="text editable">
 				<h2>How can I <strong>keep track</strong> of my reach?</h2>
-				<p>Psytechnic provides all of the insights you need to see how you're being found.</p>
+				<p>PsyTechnic provides all of the insights you need to see how you're being found.</p>
 			</div>
 			<div class="image">
 				<img src="https://www.google.com/intl/en_au/business/2017/images/static/index/emerging/index-optimize-laptop_2x.png" alt="Screenshot" class="screenshot editable" />
