--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,12 @@
 ---
 title: Contact
 heading: Get in touch today
-description: We'd love to help you improve your sales.
+description: We'd love to help you grow your site and business.
 
 map:
   latitude: -45.8787605
   longitude: 170.5027976
-  address: "1 George Street, Dunedin, New Zealand"
+  address: "Newcastle, Australia"
   zoom: 13
 ---
 <!-- <div class="map" id="map"></div> -->
