--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 title: Who is PsyTechnic?
 description: We're passionate to help small businesses grow, and see your dreams become a reality.
 ---
-<p class="editor-link" style="text-align: center;"><a href="cloudcannon:collections/_staff_members/" class="btn"><strong>&#9998;</strong> Manage Staff members</a></p>
+<!-- <p class="editor-link" style="text-align: center;"><a href="cloudcannon:collections/_staff_members/" class="btn"><strong>&#9998;</strong> Manage Staff members</a></p> -->
 <ul class="staff">
 	{% for person in site.staff_members %}
 		<li>
