--- a/pricing.html
+++ b/pricing.html
@@ -6,11 +6,13 @@ pricing_table:
   - name: Basic
     color: "#8e8e8e"
     features:
-      - text: $25 per month
+      - text: $150 per month
         highlight: true
+      - text: Facebook Listing Clean up
+        highlight: false
       - text: Google My Business Set Up
         highlight: false
-      - text: Enter Business Information
+      - text: Business Hours Listing
         highlight: false
       - text: Cover Picture
         highlight: false      
@@ -20,42 +22,30 @@ pricing_table:
   - name: Pro
     color: "#4a4a4a"
     features:
-      - text: $99 per month
+      - text: $250 per month
         highlight: true
       - text: Everything in Basic
         highlight: false
-      - text: Up to 25 users
-        highlight: false
-      - text: Advanced lead scoring
-        highlight: false
-      - text: Pipeline management
-        highlight: false
-      - text: Advanced reporting
-        highlight: false
+      - text: Booking Functionality
+        highlight: false      
     call_to_action:
       link: http://mysite.com?plan=pro
       text: Get started
   - name: Professional
     color: "#000000"
     features:
-      - text: $299 per month
+      - text: $400 per month
         highlight: true
       - text: Everything in Basic and Pro
         highlight: false
-      - text: Standalone WEebsite Creation
-        highlight: false
-      - text: Campaign builder
-        highlight: false
-      - text: Machine learning
-        highlight: false
-      - text: Calendar
-        highlight: false
+      - text: Website Creation
+        highlight: false      
     call_to_action:
       link: http://mysite.com?plan=professional
       text: Get started
 faq:
   - question: What types of payment do you accept?
-    answer: Credit cards including MasterCard, Visa or American Express.
+    answer: BPay, Credit cards including MasterCard, Visa.
   - question: Can I change my plan at a later time?
     answer: Yes, you can upgrade and downgrade your plan at anytime.
   - question: Do you offer pricing for nonprofit organizations?
