--- a/pricing.html
+++ b/pricing.html
@@ -6,40 +6,41 @@ pricing_table:
   - name: Basic
     color: "#8e8e8e"
     features:
-      - text: $150 per month
+      - text: $55 per month
         highlight: true
-      - text: Facebook Listing Clean up
+      - text: Facebook Page Creation
         highlight: false
-      - text: Google My Business Set Up
+     - text: Facebook Page Optimization
         highlight: false
-      - text: Business Hours Listing
-        highlight: false
-      - text: Cover Picture
-        highlight: false      
     call_to_action:
       link: http://mysite.com?plan=basic
       text: Get started
   - name: Pro
     color: "#4a4a4a"
     features:
-      - text: $250 per month
+      - text: $125 per month
         highlight: true
-      - text: Everything in Basic
+      - text: Everything in Basic PLUS
         highlight: false
-      - text: Booking Functionality
-        highlight: false      
+      - text: Google My Business Set Up
+        highlight: false
+     - text: Monthly Data Insights
+        highlight: false
+         
     call_to_action:
       link: http://mysite.com?plan=pro
       text: Get started
   - name: Professional
     color: "#000000"
     features:
-      - text: $400 per month
+      - text: $250 per month
         highlight: true
       - text: Everything in Basic and Pro
         highlight: false
-      - text: Website Creation
-        highlight: false      
+      - text: Full Website Creation
+        highlight: false
+    - text: Website Management
+        highlight: false
     call_to_action:
       link: http://mysite.com?plan=professional
       text: Get started
