--- a/pricing.html
+++ b/pricing.html
@@ -3,14 +3,21 @@ title: Pricing
 heading: Find the perfect plan for your business
 description: All plans include our award winning sales optimization solution to track your sales in real time.
 pricing_table:
+pricing_table:
   - name: Basic
     color: "#8e8e8e"
     features:
       - text: $55 per month
         highlight: true
-      - text: Facebook Page Creation
+      - text: Facebook Page Optimization
         highlight: false
-     - text: Facebook Page Optimization
+      - text: Google My Business Creation
+        highlight: false
+      - text: Data Synchronisation
+        highlight: false
+      - text: Basic reporting
+        highlight: false
+      - text: Sales map
         highlight: false
     call_to_action:
       link: http://mysite.com?plan=basic
@@ -18,31 +25,39 @@ pricing_table:
   - name: Pro
     color: "#4a4a4a"
     features:
-      - text: $125 per month
+      - text: $150 per month
         highlight: true
-      - text: Everything in Basic PLUS
+      - text: Everything in Basic
         highlight: false
-      - text: Google My Business Set Up
+      - text: Website Creation
         highlight: false
-     - text: Monthly Data Insights
-        highlight: false         
+      - text: Monthly Insights Reporting 
+        highlight: false
+      - text: Pipeline management
+        highlight: false
+      - text: Advanced reporting
+        highlight: false
     call_to_action:
       link: http://mysite.com?plan=pro
       text: Get started
   - name: Professional
     color: "#000000"
     features:
-      - text: $250 per month
+      - text: $299 per month
         highlight: true
       - text: Everything in Basic and Pro
         highlight: false
-      - text: Full Website Creation
+      - text: Up to 100 users
         highlight: false
-    - text: Website Management
+      - text: Campaign builder
+        highlight: false
+      - text: Machine learning
+        highlight: false
+      - text: Calendar
         highlight: false
     call_to_action:
       link: http://mysite.com?plan=professional
-      text: Get started
+      text: Get started 
 faq:
   - question: What types of payment do you accept?
     answer: BPay, Credit cards including MasterCard, Visa.
