--- a/pricing.html
+++ b/pricing.html
@@ -3,17 +3,16 @@ title: Pricing
 heading: Find the perfect plan for your business
 description: All plans include our award winning sales optimization solution to track your sales in real time.
 pricing_table:
-pricing_table:
   - name: Basic
     color: "#8e8e8e"
     features:
-      - text: $55 per month
+      - text: $25 per month
         highlight: true
-      - text: Facebook Page Optimization
+      - text: Up to 5 users
         highlight: false
-      - text: Google My Business Creation
+      - text: Basic lead scoring
         highlight: false
-      - text: Data Synchronisation
+      - text: CRM
         highlight: false
       - text: Basic reporting
         highlight: false
@@ -25,13 +24,13 @@ pricing_table:
   - name: Pro
     color: "#4a4a4a"
     features:
-      - text: $150 per month
+      - text: $99 per month
         highlight: true
       - text: Everything in Basic
         highlight: false
-      - text: Website Creation
+      - text: Up to 25 users
         highlight: false
-      - text: Monthly Insights Reporting 
+      - text: Advanced lead scoring
         highlight: false
       - text: Pipeline management
         highlight: false
@@ -57,10 +56,10 @@ pricing_table:
         highlight: false
     call_to_action:
       link: http://mysite.com?plan=professional
-      text: Get started 
+      text: Get started
 faq:
   - question: What types of payment do you accept?
-    answer: BPay, Credit cards including MasterCard, Visa.
+    answer: Credit cards including MasterCard, Visa or American Express.
   - question: Can I change my plan at a later time?
     answer: Yes, you can upgrade and downgrade your plan at anytime.
   - question: Do you offer pricing for nonprofit organizations?
