--- a/pricing.html
+++ b/pricing.html
@@ -6,13 +6,13 @@ pricing_table:
   - name: Basic
     color: "#8e8e8e"
     features:
-      - text: $25 per month
+      - text: $75 per month
         highlight: true
-      - text: Up to 5 users
+      - text: Facebook Page Optimization
         highlight: false
-      - text: Basic lead scoring
+      - text: Google My Business Creation
         highlight: false
-      - text: CRM
+      - text: Google My Business Maintenance
         highlight: false
       - text: Basic reporting
         highlight: false
@@ -24,13 +24,13 @@ pricing_table:
   - name: Pro
     color: "#4a4a4a"
     features:
-      - text: $99 per month
+      - text: $250 per month
         highlight: true
       - text: Everything in Basic
         highlight: false
-      - text: Up to 25 users
+      - text: Website Creation
         highlight: false
-      - text: Advanced lead scoring
+      - text: Ongoing Website Maintenance
         highlight: false
       - text: Pipeline management
         highlight: false
