--- a/pricing.html
+++ b/pricing.html
@@ -28,25 +28,23 @@ pricing_table:
         highlight: true
       - text: Everything in Basic
         highlight: false
-      - text: Website Creation
+      - text: Static Website Creation
         highlight: false
       - text: Ongoing Website Maintenance
         highlight: false
-      - text: Pipeline management
-        highlight: false
-      - text: Advanced reporting
-        highlight: false
+      - text: Advance reporting
+        highlight: false      
     call_to_action:
       link: http://mysite.com?plan=pro
       text: Get started
   - name: Professional
     color: "#000000"
     features:
-      - text: $299 per month
+      - text: $400 per month
         highlight: true
       - text: Everything in Basic and Pro
         highlight: false
-      - text: Up to 100 users
+      - text: Website with Checkout
         highlight: false
       - text: Campaign builder
         highlight: false
