--- a/pricing.html
+++ b/pricing.html
@@ -4,7 +4,7 @@ heading: Find the perfect plan for your business
 description: All plans include our award winning sales optimization solution to track your sales in real time.
 pricing_table:
   - name: Basic
-    color: "#8e8e8e"
+    color: "#cd7f32"
     features:
       - text: $75 per month
         highlight: true
@@ -20,7 +20,7 @@ pricing_table:
       link: http://mysite.com?plan=basic
       text: Get started
   - name: Pro
-    color: "#4a4a4a"
+    color: "#c0c0c0"
     features:
       - text: $250 per month
         highlight: true
@@ -36,7 +36,7 @@ pricing_table:
       link: http://mysite.com?plan=pro
       text: Get started
   - name: Professional
-    color: "#000000"
+    color: "#ffd700"
     features:
       - text: $400 per month
         highlight: true
