--- a/pricing.html
+++ b/pricing.html
@@ -36,7 +36,7 @@ pricing_table:
       link: http://mysite.com?plan=pro
       text: Get started
   - name: Professional
-    color: "#ffc200"
+    color: "#ffd700"
     features:
       - text: $400 per month
         highlight: true
